Fix search, sidebar track and track name on mobile

--- a/src/style/sass/media.sass
+++ b/src/style/sass/media.sass
@@ -298,6 +298,25 @@
 		&-elem
 			width: 33.33%
 
+@media screen and (max-width: 840px)
+	.wrapper-tab
+		margin:
+			bottom: 10px
+
+		&-elem
+			margin: 0
+				right: 10px
+				bottom: 10px
+			border-radius: 5px
+
+			&:last-child
+				margin:
+					right: 0
+
+			&:first-child,
+			&:last-child
+				border-radius: 5px
+
 @media screen and (max-width: 764px)
 	.top-line
 		padding: 15px
@@ -604,24 +623,6 @@
 			margin:
 				right: 4px
 	
-	.wrapper-tab
-		margin:
-			bottom: 10px
-
-		&-elem
-			margin: 0
-				right: 10px
-				bottom: 10px
-			border-radius: 5px
-
-			&:last-child
-				margin:
-					right: 0
-
-			&:first-child,
-			&:last-child
-				border-radius: 5px
-
 	.track
 		margin:
 			bottom: 10px
@@ -731,7 +732,12 @@
 			margin: 0
 			order: 5
 			
-	
+	.media
+		&-link,
+		&-name,
+		&-artist
+			max-width: 155px
+
 @media screen and (max-width: 350px)
 	.main-slider
 		margin:
