--- a/src/style/sass/var/sidebar.sass
+++ b/src/style/sass/var/sidebar.sass
@@ -69,6 +69,7 @@
 
 			&:before
 				background-image: url(../img/icon/play-btn.svg)
+				background-position: 9px center
 				opacity: 1
 			
 			&:after
