--- a/src/style/sass/var/top_line.sass
+++ b/src/style/sass/var/top_line.sass
@@ -29,19 +29,29 @@
 
 		&-input
 			padding: 15px 20px
-				right: 36px
+				right: 40px
 			width: 100%
 			font-size: 14px
 			line-height: 14px
 			border: $border-param
 			border-radius: 5px
 
-		&-icon
+		&-btn
+			+flex
 			position: absolute
-			top: 15px
-			right: 17px
-			width: 16px
-			height: 16px
+			top: 0
+			right: 0
+			width: 40px
+			height: 100%
+			font-size: 0
+			border: 0
+			background-color: transparent
+			background-image: url(../img/icon/search-icon.svg)
+			background-size: 16px 16px
+			background-position: 7px center
+			background-repeat: no-repeat
+			+align-items(center)
+			cursor: pointer
 
 	&_nav
 		&-list
