--- a/src/style/sass/vars.sass
+++ b/src/style/sass/vars.sass
@@ -744,7 +744,7 @@ a
 	&-name,
 	&-artist
 		display: block
-		max-width: 300px
+		max-width: 225px
 		white-space: nowrap
 		-o-text-overflow: ellipsis
 		text-overflow: ellipsis
